--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ Variables
 */
 
 :root {
-  
   /* dark shades of primary color*/
   --clr-primary-1: hsl(205, 86%, 17%);
   --clr-primary-2: hsl(205, 77%, 27%);
@@ -61,8 +60,8 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-white);
-  color: var(--clr-grey-1);
+  background:black;
+  color: var( --clr-primary-9);
   line-height: 1.5;
   font-size: 0.875rem;
 }
@@ -72,7 +71,7 @@ ul {
 a {
   text-decoration: none;
 }
-button{
+button {
   cursor: pointer;
 }
 h1,
@@ -150,11 +149,9 @@ Stock Photos
 }
 .search-form {
   display: flex;
- 
 }
 .form-input {
   width: 100%;
-
 }
 .form-input,
 .submit-btn {
@@ -206,7 +203,6 @@ Stock Photos
   border-radius: 50%;
 }
 h2 {
-  
   font-family: cursive;
 }
 .photo-info {
@@ -238,4 +234,9 @@ h2 {
 .loading {
   text-align: center;
   padding: 3rem;
+}
+.svg {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
